2006-11-01  Matt Rice  <ratmice@yahoo.com>
	
	* Source/NSTableView.m:
	(-editColumn:row:withEvent:select:): Raise when passed an unselected
	row.
	(-textDidEndEditing:): Handle NSReturnTextMovement.
	(_editNextCellAfterRow:inColumn:): New private method.
	

2006-11-01  Matt Rice  <ratmice@yahoo.com>

	* Source/NSTableView.m: Add new private methods.
	(-mouseDown:): Reorganize and don't track cells until dragging 
	has been ruled out.
	* Source/NSCell.m (trackMouse:inRect:ofView:untilMouseUp:):
	Handle events no longer in the queue.
	* Source/GSDragView.m: Change NSLog to NSDebugLLog.

2006-10-31  Matt Rice  <ratmice@yahoo.com>

	*  Tools/gopen.m
	*  Source/NSView.m
	*  Source/GSPDFPrintOperation.m
	*  Source/NSHelpManager.m
	*  Source/GSHelpManagerPanel.m: Add missing includes.

2006-10-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: add missing include

2006-10-30  Matt Rice  <ratmice@yahoo.com>

	* Source/NSComboBoxCell.m (validateSelection): Test for invalid row.

2006-10-28  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication.m (initialize_gnustep_backend): Use
	GSBackend class directly when backend is compiled as a library.
	(Partial fix for Bug #16453, see also gnustep-back).

2006-10-27  Matt Rice  <ratmice@yahoo.com>

	* Source/NSAlert.m: Add GSRunExceptionPanel function
	and GSExceptionPanel class.
	* Headers/AppKit/NSPanel.h: Declare GSRunExceptionPanel.
	* Source/NSApplication.m (_NSAppKitUncaughtExceptionHandler):
	Use GSRunExceptionPanel.

2006-10-27  Matt Rice  <ratmice@yahoo.com>
	
	* Source/NSTableView.m (-setFrame:,-setFrameSize:): Use
	documentVisibleRect. Shrink if table is larger than needed height.
	fixes bug #18117.
	(-drawBackgroundInClipRect:): Draw the background. 
	* Source/NSClipView.m (-documentVisibleRect:): Return the clip views
	visible rect converted to the document views coordinate system.

2006-10-24  Matt Rice  <ratmice@yahoo.com>

	* Source/NSApplication.m (NSAppIcon -mouseDown:): Call unhide: